# search-engine

./: .gitignore  CMakeLists.txt  ConcurrentOnTheFlyDocumentSearch_benchmarking.csv  OnTheFlyDocumentSearch.h.in  OnTheFlyDocumentSearch_benchmarking.csv  OnTheFlyWebSearch.h.in  README.md  gcovr.cfg  install.sh  onTheFlyBasicDocument.h.in  onTheFlyBasicWeb.h.in  test-script.cmake
.github/workflows/: cmake.yml
benchmarking/: CMakeLists.txt  bt-benchmarking.py  concurrent-document-benchmarking.py  document-benchmarking.py  sequential-document-benchmarking.py  sequential-word-benchmarking.py  word-benchmarking.py
benchmarking/ConcurrentOnTheFlyDocumentSearch/: CMakeLists.txt  main.cpp
benchmarking/OnTheFlyDocumentSearch/: CMakeLists.txt  main.cpp
benchmarking/OnTheFlyWebSearch/: CMakeLists.txt  main.cpp
benchmarking/PreComputedDocumentSearch/: CMakeLists.txt  main.cpp
benchmarking/on_the_fly_basic_document/: CMakeLists.txt  main.cpp
benchmarking/on_the_fly_basic_web/: CMakeLists.txt  main.cpp
benchmarking/resources/: stopwords.txt
cmake/: Config.cmake.in  SeekerConfig.h.in
docs/: README.md  benchmark.md  command-line.md  components.md  executable.md  library.md  testing.md
dummy-text/: demo.txt
include/: concurrent-engine.hpp  concurrent_queue_handler.hpp  concurrent_thread_manager.hpp  concurrent_thread_queue.hpp  doc_meta.hpp  engine.hpp  helpers.hpp  page_meta.hpp  queue_handler.hpp  thread_manager.hpp  thread_queue.hpp  token_meta.hpp
include/helper/: string_helper.hpp
modules/: CMakeLists.txt
modules/concurrent-indexer/: CMakeLists.txt
modules/crawling/: CMakeLists.txt
modules/crawling/concurrent-document-crawler/: CMakeLists.txt
modules/crawling/concurrent-document-crawler/include/: concurrent_doc_crawler.hpp
modules/crawling/concurrent-document-crawler/src/: concurrent_doc_crawler.cpp
modules/crawling/concurrent-document-store/: CMakeLists.txt
modules/crawling/concurrent-document-store/include/: concurrent_doc_store.hpp
modules/crawling/concurrent-document-store/src/: concurrent_doc_store.cpp
modules/crawling/document-crawler/: CMakeLists.txt
modules/crawling/document-crawler/include/: crawler.hpp  doc_crawler.hpp  doc_store.hpp
modules/crawling/document-crawler/src/: crawler.cpp  doc_crawler.cpp  doc_store.cpp
modules/crawling/document-crawler/testing/: CMakeLists.txt
modules/crawling/document-crawler/testing/src/: crawler-test-cases.cpp  document-crawler-end-to-end-test.cpp  document-crawler-test-cases.cpp  document-store-test-cases.cpp  e2e-test.cpp
modules/crawling/document-store/: CMakeLists.txt
modules/crawling/document-store/include/: doc_store.hpp
modules/crawling/document-store/src/: doc_store.cpp
modules/crawling/document-store/testing/: CMakeLists.txt
modules/crawling/document-store/testing/src/: document-store-test-cases.cpp  e2e-test.cpp
modules/crawling/include/: crawler.hpp  doc_store.hpp
modules/crawling/pre-computed-document-crawler/: CMakeLists.txt
modules/crawling/pre-computed-document-crawler/include/: pre_computed_doc_crawler.hpp
modules/crawling/pre-computed-document-crawler/src/: pre_computed_doc_crawler.cpp
modules/crawling/pre-computed-document-store/: CMakeLists.txt
modules/crawling/pre-computed-document-store/include/: pre_computed_doc_store.hpp
modules/crawling/pre-computed-document-store/src/: pre_computed_doc_store.cpp
modules/crawling/src/: crawler.cpp  doc_store.cpp
modules/crawling/testing/: CMakeLists.txt  repository.json  testing-crawler-found-docs.json
modules/crawling/testing/src/: crawler-test-cases.cpp  document-store-test-cases.cpp  testing.cpp
modules/crawling/testing/testing-documents/: demo2.txt
modules/crawling/testing/testing-documents/test-folder/: demo3.txt
modules/crawling/web-crawler/: CMakeLists.txt
modules/crawling/web-crawler/include/: crawler.hpp  page_store.hpp  web_crawler.hpp
modules/crawling/web-crawler/src/: crawler.cpp  page_store.cpp  web_crawler.cpp
modules/crawling/web-crawler/testing/: CMakeLists.txt
modules/crawling/web-crawler/testing/src/: e2e-test.cpp  web-crawler-test-cases.cpp
modules/crawling/web-crawler/testing/test-html-pages/: index.html  searchengine.html
modules/indexing/: CMakeLists.txt
modules/indexing/documents/: special.txt
modules/indexing/include/: indexer.hpp  parser.hpp
modules/indexing/src/: indexer.cpp  parser.cpp
modules/indexing/testing/: CMakeLists.txt  index.json  repository.json
modules/indexing/testing/src/: indexer-end-to-end-test.cpp  indexer-test-cases.cpp
modules/indexing/testing/testing-documents/: demo.txt
modules/pre-computed-indexer/: CMakeLists.txt
modules/ranking/: CMakeLists.txt
modules/ranking/include/: ranker.hpp  ranking.hpp
modules/ranking/src/: ranker.cpp  ranking.cpp
modules/ranking/testing/: CMakeLists.txt  index.json  store.json
modules/ranking/testing/src/: e2e.cpp  ranker-end-to-end-test.cpp  ranker-test-cases.cpp  testing.cpp
src/: concurrentDocumentSearch.cpp  main.cpp  onTheFlyBasicDocument.cpp  onTheFlyBasicWeb.cpp  onTheFlyDocumentSearch.cpp  onTheFlyWebSearch.cpp  preComputedBasicDocument.cpp
src/adder/: CMakeLists.txt
src/adder/src/: adder.cpp
src/documents/: demo.txt  demo2.txt
src/parser/: CMakeLists.txt
testing/: CMakeLists.txt
testing/OnTheFlyDocumentSearch/: CMakeLists.txt  test-cases.cpp
testing/OnTheFlyWebSearch/: CMakeLists.txt  test-cases.cpp
testing/document-crawler/: CMakeLists.txt
testing/document-crawler/src/: document-crawler-end-to-end-test.cpp  document-crawler-test-cases.cpp
testing/document-store/: CMakeLists.txt  main.cpp
testing/helper/: CMakeLists.txt  test-cases.cpp
testing/indexer/: CMakeLists.txt  main.cpp
testing/on_the_fly_basic_document/: CMakeLists.txt  test-cases.cpp
testing/on_the_fly_basic_document/resources/test-documents/: doc1.txt  doc2.txt
testing/on_the_fly_basic_web/: CMakeLists.txt  test-cases.cpp
testing/ranker/: CMakeLists.txt
testing/web-crawler/: CMakeLists.txt
testing/web-crawler/src/: web-crawler-end-to-end-test.cpp  web-crawler-test-cases.cpp
(+16 files in other folders)
